[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "nonebot-plugin-gspanel-lite"
version = "0.1.2"
description = "A lightweight NoneBot2 plugin for querying Genshin Impact UID profile information via Enka. Need nonebot_plugin_htmlrender as prerequisite."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "WhyPilotXia" }
]
dependencies = [
  "nonebot2>=2.3.0",
  "nonebot-adapter-onebot>=2.0.0",
  "aiohttp>=3.8.0",
  "nonebot-plugin-htmlrender>=0.2.0"
]
keywords = ["nonebot", "nonebot2", "genshin", "htmlrender", "onebot"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Robot Framework",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Chat"
]

[project.urls]
Homepage = "https://github.com/WhyPilotXia/nonebot-plugin-gspanel-lite"
Repository = "https://github.com/WhyPilotXia/nonebot-plugin-gspanel-lite"
Issues = "https://github.com/WhyPilotXia/nonebot-plugin-gspanel-lite/issues"

[tool.hatch.build.targets.wheel]
packages = ["nonebot_plugin_gspanel_lite"]
